--- a/modules/k8s-mesh/config/kiali-operator.yaml
+++ b/modules/k8s-mesh/config/kiali-operator.yaml
@@ -43,6 +43,85 @@ cr:
   namespace: ""
 
   spec:
-    deployment:
-      accessible_namespaces:
-      - '**'
+  version: v1.24
+  istio_namespace: istio-system
+  istio_component_namespaces:
+    prometheus: monitoring
+    grafana: monitoring
+    tracing: monitoring
+  api:
+    namespaces:
+      exclude:
+      - "istio-operator"
+      - "kube.*"
+      - "openshift.*"
+      - "ibm.*"
+      - "kiali-operator"
+      - "argocd"
+      - "cert-manager"
+      - "flux"
+      - "harbor"
+      - "openebs"
+      - "permission-manager"
+  auth:
+    strategy: "token"
+  deployment:
+    accessible_namespaces: ["**"]
+    namespace: istio-system
+    ingress_enabled: false
+  server:
+    web_fqdn: kiali.kube.example.com
+  external_services:
+    grafana:
+      enabled: true
+      auth:
+        password: exampledev
+        type: basic
+        use_kiali_token: false
+        username: exampledev
+      component_status:
+        app_label: "grafana"
+        is_core: true
+        namespace: "monitoring"
+      dashboards:
+        - name: "Istio Service Dashboard"
+          variables:
+            namespace: "var-namespace"
+            service: "var-service"
+        - name: "Istio Workload Dashboard"
+          variables:
+            namespace: "var-namespace"
+            workload: "var-workload"
+      in_cluster_url: "http://grafana.monitoring.svc.cluster.local:3000"
+      url: "https://grafana.kube.example.com"
+    istio:
+      component_status:
+        enabled: true
+        components:
+        - app_label: istiod
+          is_core: true
+        - app_label: istio-ingressgateway
+          is_core: true
+        - app_label: istio-egressgateway
+          is_core: true
+      config_map_name: "istio"
+      istio_identity_domain: "svc.cluster.local"
+      istio_injection_annotation: "sidecar.istio.io/inject"
+      istio_sidecar_annotation: "sidecar.istio.io/status"
+      url_service_version: ""
+    prometheus:
+      component_status:
+        app_label: "prometheus"
+        namespace: monitoring
+        is_core: true
+      url: "http://po-prometheus.monitoring.svc.cluster.local:9090"
+    tracing:
+      enabled: true
+      component_status:
+        app_label: "jaeger"
+        is_core: true
+        namespace: "monitoring"
+      in_cluster_url: "http://jaeger-tracer-query.monitoring"
+      namespace_selector: true
+      url: "https://jaeger.kube.example.com"
+      whitelist_istio_system: ["istio-egressgateway", "istio-ingressgateway"]
