--- a/modules/k8s-mesh/charts/istio/templates/dataplane.yaml
+++ b/modules/k8s-mesh/charts/istio/templates/dataplane.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     monitoring: istio-dataplane
     release: prometheus
+  namespace: istio-system
 spec:
   selector:
     matchExpressions:
