--- a/modules/k8s-mesh/config/kiali-operator.yaml
+++ b/modules/k8s-mesh/config/kiali-operator.yaml
@@ -114,12 +114,12 @@ cr:
           is_core: true
         url: "http://kube-prometheus-stack-prometheus.kube-prometheus-stack.svc.cluster.local:9090"
       tracing:
-        enabled: false
+        enabled: true
         component_status:
           app_label: "jaeger"
           is_core: true
-          namespace: "monitoring"
-        in_cluster_url: "http://jaeger-tracer-query.monitoring"
+          namespace: "istio-system"
+        in_cluster_url: "http://jaeger-tracer-query.istio-system"
         namespace_selector: true
         url: "https://jaeger.kube.example.com"
         whitelist_istio_system: ["istio-egressgateway", "istio-ingressgateway"]
