--- a/modules/k8s-mesh/config/jaeger-operator.yaml
+++ b/modules/k8s-mesh/config/jaeger-operator.yaml
@@ -1,22 +1,6 @@
 jaeger:
-  spec:
-    ingress: 
-      enabled: false
-    strategy: allInOne
+  spec:    
     allInOne:
-      image: jaegertracing/all-in-one:1.13
-      options:
-        log-level: debug
-        query:
-          base-path: /jaeger
-    ui:
-      options:
-        dependencies:
-          menuEnabled: false
-        tracking: 
-          gaID: UA-000000-2
-        menu:
-          - label: "About Jaeger"
-            items:
-              - label: "Documentation"
-                url: "https://www.jaegertracing.io/docs/latest"
+      image: jaegertracing/all-in-one:latest
+    agent:
+      image: jaegertracing/jaeger-agent:latest
