--- a/modules/k8s-mesh/charts/istio/templates/istio-operator.yaml
+++ b/modules/k8s-mesh/charts/istio/templates/istio-operator.yaml
@@ -6,23 +6,44 @@ metadata:
 spec:
   hub: {{.Values.hub}}
   tag: {{.Values.tag}}
+  profile: empty
 
-  # You may override parts of meshconfig by uncommenting the following lines.
   meshConfig:
+    accessLogFile: /dev/stdout
+    outboundTrafficPolicy:
+      mode: REGISTRY_ONLY
     defaultConfig:
       proxyMetadata: {}
+    enableAutoMtls: false
     enablePrometheusMerge: true
-    # Opt-out of global http2 upgrades.
-    # Destination rule is used to opt-in.
-    # h2_upgrade_policy: DO_NOT_UPGRADE
 
   # Traffic management feature
   components:
     base:
       enabled: true
+    # Istio controlplane feature
     pilot:
       enabled: true
       k8s:
+        # affinity:
+        #   podAntiAffinity:
+        #     requiredDuringSchedulingIgnoredDuringExecution:
+        #     - labelSelector:
+        #         matchExpressions:
+        #         - key: istio
+        #           operator: In
+        #           values:
+        #           - pilot
+        #       topologyKey: kubernetes.io/hostname
+        hpaSpec:
+          maxReplicas: 5
+          minReplicas: 2
+          scaleTargetRef:
+            apiVersion: apps/v1
+            kind: Deployment
+            name: istiod
+        # nodeSelector:
+        #   worker-class: private
         env:
           - name: POD_NAME
             valueFrom:
@@ -41,300 +62,79 @@ spec:
           initialDelaySeconds: 1
           periodSeconds: 3
           timeoutSeconds: 5
-        strategy:
-          rollingUpdate:
-            maxSurge: "100%"
-            maxUnavailable: "25%"
-
+            
     # Istio Gateway feature
-    ingressGateways:
-    - name: istio-ingressgateway
-      enabled: false
+    egressGateways:
+    - name: istio-egressgateway
+      enabled: true
       k8s:
-        env:
-          - name: ISTIO_META_ROUTER_MODE
-            value: "standard"
+        # affinity:
+        #   podAntiAffinity:
+        #     requiredDuringSchedulingIgnoredDuringExecution:
+        #     - labelSelector:
+        #         matchExpressions:
+        #         - key: istio
+        #           operator: In
+        #           values:
+        #           - egressgateway
+        #       topologyKey: kubernetes.io/hostname
+        # nodeSelector:
+        #   worker-class: private-edge
         service:
           ports:
-            - port: 15021
-              targetPort: 15021
-              name: status-port
-              protocol: TCP
             - port: 80
-              targetPort: 8080
               name: http2
+              targetPort: 8080
               protocol: TCP
             - port: 443
-              targetPort: 8443
               name: https
-              protocol: TCP
-            - port: 15012
-              targetPort: 15012
-              name: tcp-istiod
+              targetPort: 8443
               protocol: TCP
             - port: 15443
               targetPort: 15443
               name: tls
               protocol: TCP
-        hpaSpec:
-          maxReplicas: 5
-          minReplicas: 1
-          scaleTargetRef:
-            apiVersion: apps/v1
-            kind: Deployment
-            name: istio-ingressgateway
-          metrics:
-            - type: Resource
-              resource:
-                name: cpu
-                targetAverageUtilization: 80
-        resources:
-          requests:
-            cpu: 100m
-            memory: 128Mi
-          limits:
-            cpu: 2000m
-            memory: 1024Mi
-        strategy:
-          rollingUpdate:
-            maxSurge: "100%"
-            maxUnavailable: "25%"
-
-    egressGateways:
-    - name: istio-egressgateway
-      enabled: true
-      k8s:
-        env:
-          - name: ISTIO_META_ROUTER_MODE
-            value: "standard"
-        service:
-          ports:
-            - port: 80
-              name: http2
-              # targetPort: 8080
-              protocol: TCP
-            - port: 443
-              name: https
-              # targetPort: 8443
-              protocol: TCP
-            - port: 15443
-              # targetPort: 15443
-              name: tls
-              protocol: TCP
             - port: 3306
               name: mysql
+              protocol: TCP
         hpaSpec:
           maxReplicas: 5
-          minReplicas: 1 #2
+          minReplicas: 2
           scaleTargetRef:
             apiVersion: apps/v1
             kind: Deployment
             name: istio-egressgateway
-          metrics:
-            - type: Resource
-              resource:
-                name: cpu
-                targetAverageUtilization: 80
-        resources:
-          requests:
-            cpu: 100m
-            memory: 128Mi
-          limits:
-            cpu: 2000m
-            memory: 1024Mi
-        strategy:
-          rollingUpdate:
-            maxSurge: "100%"
-            maxUnavailable: "25%"
-    # Istio CNI feature
-    cni:
-      enabled: false
-    
-    # istiod remote configuration wwhen istiod isn't installed on the cluster
-    istiodRemote:
-      enabled: false
 
-  addonComponents:
-    istiocoredns:
-      enabled: false
-
-
-  # Global values passed through to helm global.yaml.
-  # Please keep this in sync with manifests/charts/global.yaml
   values:
     global:
       istioNamespace: istio-system
-      istiod:
-        enableAnalysis: true
-      logging:
-        level: "default:info"
-      logAsJson: false
-      pilotCertProvider: istiod
-      jwtPolicy: third-party-jwt
       proxy:
-        image: proxyv2
-        clusterDomain: "cluster.local"
+        image: istio-proxyv2
         resources:
           requests:
             cpu: 100m
             memory: 128Mi
           limits:
-            cpu: 2000m
-            memory: 1024Mi
+            cpu: 500m
+            memory: 256Mi
         logLevel: info
-        componentLogLevel: "misc:error"
-        privileged: false
-        enableCoreDump: false
-        statusPort: 15020
-        readinessInitialDelaySeconds: 1
-        readinessPeriodSeconds: 2
-        readinessFailureThreshold: 30
-        includeIPRanges: "*"
-        excludeIPRanges: ""
-        excludeOutboundPorts: ""
-        excludeInboundPorts: ""
-        autoInject: enabled
-        tracer: "zipkin"
+        privileged: true
       proxy_init:
-        image: proxyv2
+        image: istio-proxyv2
         resources:
           limits:
-            cpu: 2000m
-            memory: 1024Mi
+            cpu: 500m
+            memory: 50Mi
           requests:
             cpu: 10m
             memory: 10Mi
-      # Specify image pull policy if default behavior isn't desired.
-      # Default behavior: latest images will be Always else IfNotPresent.
-      imagePullPolicy: ""
-      operatorManageWebhooks: false
-      tracer:
-        lightstep: {}
-        zipkin: {}
-        datadog: {}
-        stackdriver: {}
-      imagePullSecrets: []
-      arch:
-        amd64: 2
-        s390x: 2
-        ppc64le: 2
-      oneNamespace: false
-      defaultNodeSelector: {}
-      configValidation: true
-      meshExpansion:
-        enabled: false
-        useILB: false
-      multiCluster:
-        enabled: false
-        clusterName: ""
-      omitSidecarInjectorConfigMap: false
-      network: ""
-      defaultResources:
-        requests:
-          cpu: 10m
-      defaultPodDisruptionBudget:
-        enabled: true
-      priorityClassName: ""
-      useMCP: false
-      sds:
-        token:
-          aud: istio-ca
-      sts:
-        servicePort: 0
-      meshNetworks: {}
-      mountMtlsCerts: false
-    base:
-      enableCRDTemplates: false
-      validationURL: ""
+
     pilot:
-      autoscaleEnabled: true
-      autoscaleMin: 1 #2
-      autoscaleMax: 5
-      replicaCount: 1
-      image: pilot
-      traceSampling: 1.0
-      env: {}
-      cpu:
-        targetAverageUtilization: 80
-      nodeSelector:
-        worker-class: private
-      # podAntiAffinityLabelSelector:
-      #   - key: istio
-      #     operator: In
-      #     values: pilot
-      #     topologyKey: kubernetes.io/hostname
-      keepaliveMaxServerConnectionAge: 30m
-      enableProtocolSniffingForOutbound: true
-      enableProtocolSniffingForInbound: true
-      deploymentLabels:
-      configMap: true
-
-    telemetry:
-      enabled: true
-      v2:
-        enabled: true
-        metadataExchange:
-          wasmEnabled: false
-        prometheus:
-          wasmEnabled: false
-          enabled: true
-        stackdriver:
-          enabled: false
-          logging: false
-          monitoring: false
-          topology: false
-          configOverride: {}
-
-    istiodRemote:
-      injectionURL: ""
-      
-    gateways:
-      istio-egressgateway:
-        zvpn: {}
-        env: {}
-        autoscaleEnabled: true
-        type: ClusterIP
-        name: istio-egressgateway
-        secretVolumes:
-          - name: egressgateway-certs
-            secretName: istio-egressgateway-certs
-            mountPath: /etc/istio/egressgateway-certs
-          - name: egressgateway-ca-certs
-            secretName: istio-egressgateway-ca-certs
-            mountPath: /etc/istio/egressgateway-ca-certs
-
-      istio-ingressgateway:
-        autoscaleEnabled: true
-        type: LoadBalancer
-        name: istio-ingressgateway
-        zvpn: {}
-        env: {}
-        nodeSelector:
-          # worker-class: private-edge
-          worker-class: private
-        podAntiAffinityLabelSelector:
-          - key: istio
-            operator: In
-            values: egressgateway
-            topologyKey: kubernetes.io/hostname
-        secretVolumes:
-          - name: ingressgateway-certs
-            secretName: istio-ingressgateway-certs
-            mountPath: /etc/istio/ingressgateway-certs
-          - name: ingressgateway-ca-certs
-            secretName: istio-ingressgateway-ca-certs
-            mountPath: /etc/istio/ingressgateway-ca-certs
+      image: istio-pilot
 
     sidecarInjectorWebhook:
       enableNamespacesByDefault: true
-      rewriteAppHTTPProbe: true
       objectSelector:
         enabled: false
-        autoInject: true
-
-    istiocoredns:
-      coreDNSImage: coredns/coredns
-      coreDNSTag: 1.6.2
-      coreDNSPluginImage: istio/coredns-plugin:0.2-istio-1.1
 
     clusterResources: true
