--- a/modules/k8s-core/charts/calico/templates/calico-typha-deployment.yaml
+++ b/modules/k8s-core/charts/calico/templates/calico-typha-deployment.yaml
@@ -22,9 +22,9 @@ spec:
         scheduler.alpha.kubernetes.io/critical-pod: ''
         cluster-autoscaler.kubernetes.io/safe-to-evict: 'true'
     spec:
-      nodeSelector:
-        beta.kubernetes.io/os: linux
-        worker-class: private
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
+      #   worker-class: private
       tolerations:
         # Mark the pod as a critical add-on for rescheduling.
         - key: CriticalAddonsOnly
