--- a/modules/k8s-core/charts/calico/templates/calico-typha-cpha-deployment.yaml
+++ b/modules/k8s-core/charts/calico/templates/calico-typha-cpha-deployment.yaml
@@ -70,9 +70,9 @@ spec:
       annotations:
         scheduler.alpha.kubernetes.io/critical-pod: ''
     spec:
-      nodeSelector:
-        beta.kubernetes.io/os: linux
-        worker-class: private
+      # nodeSelector:
+      #   beta.kubernetes.io/os: linux
+      #   worker-class: private
       containers:
         - image: "{{ .Values.cluster_proportional_autoscaler.repository }}:{{ .Values.cluster_proportional_autoscaler.tag }}"
           name: autoscaler
