--- a/modules/k8s-mesh/config/kiali-operator.yaml
+++ b/modules/k8s-mesh/config/kiali-operator.yaml
@@ -45,9 +45,9 @@ cr:
   spec:
     istio_namespace: istio-system
     istio_component_namespaces:
-      prometheus: kube-prometheus-stack
-      grafana: kube-prometheus-stack
-      tracing: kube-prometheus-stack
+      prometheus: monitoring
+      grafana: monitoring
+      tracing: monitoring
     auth:
       strategy: "anonymous"
     deployment:
@@ -78,8 +78,8 @@ cr:
       prometheus:
         component_status:
           app_label: "prometheus"
-          namespace: kube-prometheus-stack
+          namespace: monitoring
           is_core: true
-        url: "http://kube-prometheus-stack-prometheus.kube-prometheus-stack.svc.cluster.local:9090"
+        url: "http://monitoring-kube-prometheus-prometheus.monitoring.svc.cluster.local:9090"
       tracing:
         enabled: false
