--- a/modules/k8s-mesh/charts/istio/templates/istio-operator.yaml
+++ b/modules/k8s-mesh/charts/istio/templates/istio-operator.yaml
@@ -133,7 +133,7 @@ spec:
       image: pilot
 
     sidecarInjectorWebhook:
-      enableNamespacesByDefault: false
+      enableNamespacesByDefault: true
       objectSelector:
         enabled: false
 
